# ooredis

./: README.md  pyproject.toml
ooredis/: __init__.py
tests/: conftest.py  test_redis_dict.py
